; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_index.c_PostProcessIndexStmt.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_index.c_PostProcessIndexStmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32, i32, i32 }
%struct.TYPE_11__ = type { i32 }
%struct.TYPE_12__ = type { i32 }

@InvalidOid = common dso_local global i32 0, align 4
@ShareUpdateExclusiveLock = common dso_local global i32 0, align 4
@RowExclusiveLock = common dso_local global i32 0, align 4
@NoLock = common dso_local global i32 0, align 4
@INDEX_DROP_CLEAR_VALID = common dso_local global i32 0, align 4
@IndexRelationId = common dso_local global i32 0, align 4
@INDEXRELID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PostProcessIndexStmt(%struct.TYPE_10__* %0) #0 {
  %2 = alloca %struct.TYPE_10__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_11__*, align 8
  %8 = alloca %struct.TYPE_12__*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %2, align 8
  store i32* null, i32** %3, align 8
  %9 = load i32, i32* @InvalidOid, align 4
  store i32 %9, i32* %4, align 4
  store i32* null, i32** %5, align 8
  store i32* null, i32** %6, align 8
  store %struct.TYPE_11__* null, %struct.TYPE_11__** %7, align 8
  store %struct.TYPE_12__* null, %struct.TYPE_12__** %8, align 8
  %10 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %1
  br label %72

15:                                               ; preds = %1
  %16 = call i32 (...) @IsCoordinator()
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %15
  br label %72

19:                                               ; preds = %15
  %20 = call i32 (...) @CommitTransactionCommand()
  %21 = call i32 (...) @StartTransactionCommand()
  %22 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %23 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* @ShareUpdateExclusiveLock, align 4
  %26 = call i32* @heap_openrv(i32 %24, i32 %25)
  store i32* %26, i32** %3, align 8
  %27 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %28 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32*, i32** %3, align 8
  %31 = call i32 @RelationGetNamespace(i32* %30)
  %32 = call i32 @get_relname_relid(i32 %29, i32 %31)
  store i32 %32, i32* %4, align 4
  %33 = load i32, i32* %4, align 4
  %34 = load i32, i32* @RowExclusiveLock, align 4
  %35 = call i32* @index_open(i32 %33, i32 %34)
  store i32* %35, i32** %5, align 8
  %36 = load i32*, i32** %3, align 8
  %37 = load i32, i32* @NoLock, align 4
  %38 = call i32 @heap_close(i32* %36, i32 %37)
  %39 = load i32*, i32** %5, align 8
  %40 = load i32, i32* @NoLock, align 4
  %41 = call i32 @index_close(i32* %39, i32 %40)
  %42 = load i32, i32* %4, align 4
  %43 = load i32, i32* @INDEX_DROP_CLEAR_VALID, align 4
  %44 = call i32 @index_set_state_flags(i32 %42, i32 %43)
  %45 = call i32 (...) @CommitTransactionCommand()
  %46 = call i32 (...) @StartTransactionCommand()
  %47 = load i32, i32* @IndexRelationId, align 4
  %48 = load i32, i32* @RowExclusiveLock, align 4
  %49 = call i32* @heap_open(i32 %47, i32 %48)
  store i32* %49, i32** %6, align 8
  %50 = load i32, i32* @INDEXRELID, align 4
  %51 = load i32, i32* %4, align 4
  %52 = call i32 @ObjectIdGetDatum(i32 %51)
  %53 = call %struct.TYPE_11__* @SearchSysCacheCopy1(i32 %50, i32 %52)
  store %struct.TYPE_11__* %53, %struct.TYPE_11__** %7, align 8
  %54 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %55 = call i32 @HeapTupleIsValid(%struct.TYPE_11__* %54)
  %56 = call i32 @Assert(i32 %55)
  %57 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %58 = call i64 @GETSTRUCT(%struct.TYPE_11__* %57)
  %59 = inttoptr i64 %58 to %struct.TYPE_12__*
  store %struct.TYPE_12__* %59, %struct.TYPE_12__** %8, align 8
  %60 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %61 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %60, i32 0, i32 0
  store i32 1, i32* %61, align 4
  %62 = load i32*, i32** %6, align 8
  %63 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %64 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %63, i32 0, i32 0
  %65 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %66 = call i32 @CatalogTupleUpdate(i32* %62, i32* %64, %struct.TYPE_11__* %65)
  %67 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %68 = call i32 @heap_freetuple(%struct.TYPE_11__* %67)
  %69 = load i32*, i32** %6, align 8
  %70 = load i32, i32* @RowExclusiveLock, align 4
  %71 = call i32 @heap_close(i32* %69, i32 %70)
  br label %72

72:                                               ; preds = %19, %18, %14
  ret void
}

declare dso_local i32 @IsCoordinator(...) #1

declare dso_local i32 @CommitTransactionCommand(...) #1

declare dso_local i32 @StartTransactionCommand(...) #1

declare dso_local i32* @heap_openrv(i32, i32) #1

declare dso_local i32 @get_relname_relid(i32, i32) #1

declare dso_local i32 @RelationGetNamespace(i32*) #1

declare dso_local i32* @index_open(i32, i32) #1

declare dso_local i32 @heap_close(i32*, i32) #1

declare dso_local i32 @index_close(i32*, i32) #1

declare dso_local i32 @index_set_state_flags(i32, i32) #1

declare dso_local i32* @heap_open(i32, i32) #1

declare dso_local %struct.TYPE_11__* @SearchSysCacheCopy1(i32, i32) #1

declare dso_local i32 @ObjectIdGetDatum(i32) #1

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @HeapTupleIsValid(%struct.TYPE_11__*) #1

declare dso_local i64 @GETSTRUCT(%struct.TYPE_11__*) #1

declare dso_local i32 @CatalogTupleUpdate(i32*, i32*, %struct.TYPE_11__*) #1

declare dso_local i32 @heap_freetuple(%struct.TYPE_11__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
